word wrap - booking page

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -146,7 +146,7 @@
                         </p>
                         </div>
 
-                        <div class="note"><span>Notes</span> : <%=booking.post_additional_comments rescue nil %>
+                        <div class="note" style="width: 488px;word-wrap: break-word;"><span>Notes</span> : <%=booking.post_additional_comments rescue nil %>
                         </div>
 
                         </div>
