--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -36,7 +36,7 @@
                             <%= link_to "Rate ", rating_bookings_path(:id=> @booking.id, :user_id => @post.user_id,:post_id => @post.id ), :remote=>true, :class=>"g-round-btn" %>
 
                             </p>
-                            <p>
+                            <p style="width: 370px;word-wrap: break-word;">
 
                               <%= @post.additional_comments %>
                             </p>
