Added mobile numder and login count to user info for admin

--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -1,29 +1,12 @@
 <table class="table table-striped">
-<tr>
-	<th>First Name </th> <td><%= @user.name %></td>
-</tr>
-<tr>
-	<th>Last Name </th> <td><%= @user.last_name %></td>
-</tr>
-<tr>
-	<th>Email ID </th> <td><%= @user.email %></td>
-</tr>
-<tr>
-	<th>Personal Email</th> <td><%= @user.personal_email %></td>
-</tr>
-<tr>
-	<th>Mobile Number</th> <td><%= @user.mobile_no %></td>
-</tr>
-<tr>
-	<th>A/C Creation Date</th> <td><%= @user.created_at.to_date rescue nil%></td>
-</tr>
-<tr>
-	<th>Last Login Date</th> <td><%= @user.last_sign_in_at.to_date rescue nil%></td>
-</tr>
-<tr>
-	<th>Last Login IP</th> <td><%= @user.last_sign_in_ip%></td>
-</tr>
-
-
+<tr><th>First Name </th><td><%= @user.name %></td></tr>
+<tr><th>Last Name </th><td><%= @user.last_name %></td></tr>
+<tr><th>Email ID </th><td><%= @user.email %></td></tr>
+<tr><th>Personal Email</th><td><%= @user.personal_email %></td></tr>
+<tr><th>Mobile Number</th><td><%= @user.mobile_number %></td></tr>
+<tr><th>A/C Creation Date</th><td><%= @user.created_at.to_date rescue nil %></td></tr>
+<tr><th>Last Login Date</th><td><%= @user.last_sign_in_at.to_date rescue nil %></td></tr>
+<tr><th>Last Login IP</th><td><%= @user.last_sign_in_ip %></td></tr>
+<tr><th> Login Count</th><td><%= @user.sign_in_count %></td></tr>
 
 </table>
