--- a/app/views/booked_mailer/booking_status.html.erb
+++ b/app/views/booked_mailer/booking_status.html.erb
@@ -1,6 +1,6 @@
-<h1><%= "Hello, #{@armoring}." %></h1>
+<h1><%= "Hello, #{@poster}." %></h1>
 
-<p>Changed the status of your <%= link_to "booking", booking_url(@booking) %>.</p>
+<p><%= "Cancellation booking. You have #{@area} sq. ft. space." %></p>
 
 <p>Thank you,</p>
 <p>team Dinobo</p>
